--- a/_posts/2024-01-21-xsd.md
+++ b/_posts/2024-01-21-xsd.md
@@ -38,7 +38,7 @@ xsi:noNamespaceSchemaLocation="marcadores.xsd">
 </marcadores>
 ```
 
-- Para vincular un esquema a un documento XML, es obligatorio que este último haga referencia al espacio de nombres <http://www.w3.org/2001/XMLSchema-instance>. Para ello, habitualmente se utiliza el prefijo xsi.
+- Para vincular un esquema a un documento XML, es obligatorio que este último haga referencia al espacio de nombres <http://www.w3.org/2001/XMLSchema-instance>. Para ello, habitualmente se utiliza el prefijo `xsi`.
 - El atributo `noNameSchemaLocation` permite referenciar a un archivo con la definición de un esquema que no tiene ningún espacio de nombres asociado. En este caso, dicho archivo es `marcadores.xsd`{: .filepath}.
 
 El esquema XML guardado en `marcadores.xsd`{: .filepath} y que permita validar el documento XML `marcadores.xml`{: .filepath} podría ser:
@@ -66,19 +66,19 @@ El esquema XML guardado en `marcadores.xsd`{: .filepath} y que permita validar e
 
 Para estar bien formado, un esquema XML tiene que cumplir las mismas reglas de sintaxis que cualquier otro documento XML.
 
-Por otra parte, hay que tener en cuenta que, en todos los esquemas XML, el elemento raíz es "schema". Ahora bien, para escribirlo, es muy común utilizar el prefijo xsd o xs.
+Por otra parte, hay que tener en cuenta que, en todos los esquemas XML, el elemento raíz es `schema`. Ahora bien, para escribirlo, es muy común utilizar el prefijo `xsd` o `xs`.
 
 Con `xmlns:xs="http://www.w3.org/2001/XMLSchema"` se ha indicado que:
 
-- Los elementos y tipos de datos utilizados en el esquema pertenecen al espacio de nombres <http://www.w3.org/2001/XMLSchema>.
-- Dichos elementos y tipos de datos deben llevar el prefijo xs (xs:schema, xs:element, xs:complexType, xs:string...).
+- Los elementos y tipos de datos utilizados en el esquema pertenecen al espacio de nombres `http://www.w3.org/2001/XMLSchema`.
+- Dichos elementos y tipos de datos deben llevar el `xs` (`xs:schema`, `xs:element`, `xs:complexType`, `xs:string`...).
 
 Fíjese también que:
 
-- Los elementos "marcadores" y "página" son de tipo complejo (complexType), ya que, contienen a otros elementos.
-- sequence indica que los elementos hijo deben aparecer, en el documento XML, en el mismo orden en el que sean declarados en el esquema.
-- Los elementos "nombre", "descripción" y "url" son de tipo simple (string en este caso) y no pueden contener a otros elementos.
-- Mediante `maxOccurs="unbounded"` se ha indicado que pueden aparecer ilimitados elementos "página" en el documento XML.
+- Los elementos `marcadores` y `página` son de tipo complejo ( `complexType`), ya que, contienen a otros elementos.
+- `sequence` indica que los elementos hijo deben aparecer, en el documento XML, en el mismo orden en el que sean declarados en el esquema.
+- Los elementos `nombre`, `descripción` y `url` son de tipo simple (`string` en este caso) y no pueden contener a otros elementos.
+- Mediante `maxOccurs="unbounded"` se ha indicado que pueden aparecer ilimitados elementos `página` en el documento XML.
 
 {:.subsection}
 ### Definición de un espacio de nombres
@@ -139,16 +139,16 @@ elementFormDefault="qualified">
 </xs:schema>
 ```
 
-- En el atributo `targetNamespace` se está indicando que los elementos definidos en este esquema ("marcadores", "página", "nombre", "descripción" y "url"), provienen del espacio de nombres <http://www.abrirllave.com/marcadores>.
+- En el atributo `targetNamespace` se está indicando que los elementos definidos en este esquema (`marcadores`, `página`, `nombre`, `descripción` y `url`), provienen del espacio de nombres `http://www.abrirllave.com/marcadores`.
 - `xmlns="http://www.abrirllave.com/marcadores"` especifica que este es el espacio de nombres por defecto.
-- El atributo `elementFormDefault="qualified"` indica que todos los elementos declarados localmente en el esquema tienen que estar calificados, es decir, tienen que pertenecer a un espacio de nombres. Por esta razón, en `marcadores.xml`{: .filepath} se han escrito con el prefijo mar.
+- El atributo `elementFormDefault="qualified"` indica que todos los elementos declarados localmente en el esquema tienen que estar calificados, es decir, tienen que pertenecer a un espacio de nombres. Por esta razón, en `marcadores.xml`{: .filepath} se han escrito con el prefijo `mar`.
 
 {:.subsection}
 ### Elementos globales y locales en XSD
 
 Los elementos pueden ser globales o locales:
 
-- Los elementos globales son hijos directos del elemento raíz, <xs:schema> en este caso. En el ejemplo que estamos tratando, solamente existe un elemento global: <xs:element name="marcadores">.
+- Los elementos globales son hijos directos del elemento raíz, `<xs:schema>` en este caso. En el ejemplo que estamos tratando, solamente existe un elemento global: `<xs:element name="marcadores">`.
 - Los elementos locales son el resto de elementos.
 
 Cuando se define un espacio de nombres, los elementos globales tienen que estar calificados, obligatoriamente.
@@ -156,7 +156,7 @@ Cuando se define un espacio de nombres, los elementos globales tienen que estar 
 {:.subsection}
 ### elementFormDefault="unqualified"
 
-EJEMPLO En el supuesto de que el valor del atributo `elementFormDefault` fuese "unqualified", para que `marcadores.xml`{: .filepath} fuese válido, se podría escribir algo similar a:
+EJEMPLO En el supuesto de que el valor del atributo `elementFormDefault` fuese `unqualified`, para que `marcadores.xml`{: .filepath} fuese válido, se podría escribir algo similar a:
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -181,12 +181,12 @@ xmlns:mar="http://www.abrirllave.com/marcadores">
 </mar:marcadores>
 ```
 
-- "unqualified" es el valor por defecto del atributo `elementFormDefault`.
+- `unqualified` es el valor por defecto del atributo `elementFormDefault`.
 
 {:.subsection}
 ### elementFormDefault="qualified"
 
-EJEMPLO Si el atributo `elementFormDefault` se definiese "qualified", también sería válido el siguiente documento XML:
+EJEMPLO Si el atributo `elementFormDefault` se definiese `qualified`, también sería válido el siguiente documento XML:
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -264,7 +264,7 @@ En pantalla se verá algo parecido a:
 ![Código fuente del archivo sitemap.xsd](codigo-sitemap-xsd.gif)
 _Código fuente del archivo sitemap.xsd_
 
-Nótese que, en el archivo `sitemap.xsd`{: .filepath}, la etiqueta <xsd:schema> contiene los atributos xmlns:xsd, targetNamespace, xmlns y elementFormDefault.
+Nótese que, en el archivo `sitemap.xsd`{: .filepath}, la etiqueta <xsd:schema> contiene los atributos `xmlns:xsd`, `targetNamespace`, `xmlns` y `elementFormDefault`.
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -279,7 +279,7 @@ Nótese que, en el archivo `sitemap.xsd`{: .filepath}, la etiqueta <xsd:schema> 
 
 Los elementos simples solamente pueden contener texto (caracteres). Dicho de otro modo, los elementos simples no pueden contener a otro u otros elementos (hijos), ni tampoco pueden tener atributos. Ahora bien, el texto contenido en un elemento simple, puede ser de diferentes tipos de datos predefinidos en W3C XML Schema o definidos por el usuario (programador).
 
-Los tipos de datos predefinidos pueden ser primitivos (string, boolean, decimal...) o derivados de estos (integer, ID, IDREF...). Véase en el siguiente enlace, una imagen donde se puede ver la relación que existe entre todos ellos:
+Los tipos de datos predefinidos pueden ser primitivos (`string`, `boolean`, `decimal`...) o derivados de estos (`integer`, `ID`, `IDREF`...). Véase en el siguiente enlace, una imagen donde se puede ver la relación que existe entre todos ellos:
 
 - <https://goo.gl/lK2l2I>
 
@@ -308,13 +308,13 @@ Sus definiciones pueden ser:
 {:.subsection}
 ### Tipos de declaración de elementos simples (fixed, default)
 
-Si se quiere indicar que un valor es fijo (fixed), se puede escribir, por ejemplo:
+Si se quiere indicar que un valor es fijo (`fixed`), se puede escribir, por ejemplo:
 
 ```xml
 <xs:element name="mes" type="xs:string" fixed="agosto"/>
 ```
 
-También, se puede especificar un valor por defecto (default), por ejemplo, tecleando:
+También, se puede especificar un valor por defecto (`default`), por ejemplo, tecleando:
 
 ```xml
 <xs:element name="mes" type="xs:string" default="agosto"/>
@@ -329,7 +329,7 @@ Para definir un atributo se puede emplear la siguiente sintaxis:
 <xs:attribute name="nombre_del_atributo" type="tipo_de_dato"/>
 ```
 
-EJEMPLO Para el elemento "curso" siguiente, donde aparece el atributo "grupo":
+EJEMPLO Para el elemento `curso` siguiente, donde aparece el atributo `grupo`:
 
 ```xml
 <curso grupo="B">2</curso>
@@ -346,30 +346,30 @@ Sus definiciones pueden ser:
 ```
 
 - Todos los atributos pueden tomar por valor tipos simples.
-- Por otra parte, cuando un elemento tiene al menos un atributo –como es el caso del elemento "curso" en este ejemplo– dicho elemento se dice que es complejo.
+- Por otra parte, cuando un elemento tiene al menos un atributo –como es el caso del elemento `curso` en este ejemplo– dicho elemento se dice que es complejo.
 
 {:.subsection}
 ### Tipos de declaración de atributos (fixed, default, optional, required)
 
-Para indicar que el valor de un atributo es fijo (fixed), es posible escribir, por ejemplo:
+Para indicar que el valor de un atributo es fijo (`fixed`), es posible escribir, por ejemplo:
 
 ```xml
 <xs:attribute name="grupo" type="xs:string" fixed="B"/>
 ```
 
-Para especificar el valor por defecto (default) de un atributo, se puede escribir:
+Para especificar el valor por defecto (`default`) de un atributo, se puede escribir:
 
 ```xml
 <xs:attribute name="grupo" type="xs:string" default="B"/>
 ```
 
-Para indicar que un atributo es obligatorio (required) escribirlo, se puede teclear:
+Para indicar que un atributo es obligatorio (`required`) escribirlo, se puede teclear:
 
 ```xml
 <xs:attribute name="grupo" type="xs:string" use="required"/>
 ```
 
-Por defecto, si no se indica nada, el atributo será opcional (optional).
+Por defecto, si no se indica nada, el atributo será opcional (`optional`).
 
 {:.section}
 ## Restricciones (facetas)
@@ -380,25 +380,25 @@ Dicho de otro modo, las facetas permiten definir restricciones sobre los posible
 
 |       Faceta      |                                                                       Descripción                                                                      |
 |:-----------------:|:------------------------------------------------------------------------------------------------------------------------------------------------------:|
-| xs:length         | Especifica una longitud fija.                                                                                                                          |
-| xs:minLength      | Especifica una longitud mínima.                                                                                                                        |
-| xs:maxLength      | Especifica una longitud máxima.                                                                                                                        |
-| xs:pattern        | Especifica un patrón de caracteres admitidos.                                                                                                          |
-| xs:enumeration    | Especifica una lista de valores admitidos.                                                                                                             |
-| xs:whiteSpace     | Especifica cómo se debe tratar a los posibles espacios  en blanco, las tabulaciones, los saltos de línea y los retornos de carro  que puedan aparecer. |
-| xs:maxInclusive   | Especifica que el valor debe ser menor o igual que el indicado.                                                                                        |
-| xs:maxExclusive   | Especifica que el valor debe ser menor que el indicado.                                                                                                |
-| xs:minExclusive   | Especifica que el valor debe ser mayor que el indicado.                                                                                                |
-| xs:minInclusive   | Especifica que el valor debe ser mayor o igual que el indicado.                                                                                        |
-| xs:totalDigits    | Especifica el número máximo de dígitos que puede tener un número.                                                                                      |
-| xs:fractionDigits | Especifica el número máximo de decimales que puede tener un número.                                                                                    |
+| `xs:length`         | Especifica una longitud fija.                                                                                                                          |
+| `xs:minLength`      | Especifica una longitud mínima.                                                                                                                        |
+| `xs:maxLength`      | Especifica una longitud máxima.                                                                                                                        |
+| `xs:pattern`        | Especifica un patrón de caracteres admitidos.                                                                                                          |
+| `xs:enumeration`    | Especifica una lista de valores admitidos.                                                                                                             |
+| `xs:whiteSpace`     | Especifica cómo se debe tratar a los posibles espacios  en blanco, las tabulaciones, los saltos de línea y los retornos de carro  que puedan aparecer. |
+| `xs:maxInclusive`   | Especifica que el valor debe ser menor o igual que el indicado.                                                                                        |
+| `xs:maxExclusive`   | Especifica que el valor debe ser menor que el indicado.                                                                                                |
+| `xs:minExclusive`   | Especifica que el valor debe ser mayor que el indicado.                                                                                                |
+| `xs:minInclusive`   | Especifica que el valor debe ser mayor o igual que el indicado.                                                                                        |
+| `xs:totalDigits`    | Especifica el número máximo de dígitos que puede tener un número.                                                                                      |
+| `xs:fractionDigits` | Especifica el número máximo de decimales que puede tener un número.                                                                                    |
 
 Seguidamente, se muestran algunos ejemplos de restricciones definidas con una o más facetas:
 
 {:.subsection}
 ### xs:minExclusive y xs:maxInclusive
 
-EJEMPLO En el siguiente código se define un elemento llamado "mes" con la restricción de que el valor que tome no pueda ser menor que 1 ni mayor que 12:
+EJEMPLO En el siguiente código se define un elemento llamado `mes` con la restricción de que el valor que tome no pueda ser menor que 1 ni mayor que 12:
 
 ```xml
 <xs:element name="mes">
@@ -411,11 +411,11 @@ EJEMPLO En el siguiente código se define un elemento llamado "mes" con la restr
 </xs:element>
 ```
 
-- xs:simpleType permite definir un tipo simple y especificar sus restricciones.
-- xs:restriction sirve para definir restricciones de un xs:simpleType (como se ha hecho en este ejemplo). También sirve para definir restricciones de un xs:simpleContent o de un xs:complexContent. Estos elementos se estudiarán más adelante en este tutorial.
+- `xs:simpleType` permite definir un tipo simple y especificar sus restricciones.
+- `xs:restriction` sirve para definir restricciones de un `xs:simpleType` (como se ha hecho en este ejemplo). También sirve para definir restricciones de un `xs:simpleContent` o de un `xs:complexContent`. Estos elementos se estudiarán más adelante en este tutorial.
 - En el atributo base se indica el tipo de dato a partir del cual se define la restricción.
-- xs:minInclusive sirve para especificar que el valor debe ser mayor o igual que el indicado en su atributo value, (en este caso, mayor o igual que 1).
-- xs:maxInclusive sirve para especificar que el valor debe ser menor o igual que el indicado en su atributo value, (en este caso, menor o igual que 12).
+- `xs:minInclusive` sirve para especificar que el valor debe ser mayor o igual que el indicado en su atributo value, (en este caso, mayor o igual que 1).
+- `xs:maxInclusive` sirve para especificar que el valor debe ser menor o igual que el indicado en su atributo value, (en este caso, menor o igual que 12).
 
 También se podría haber escrito:
 
@@ -430,12 +430,12 @@ También se podría haber escrito:
 </xs:simpleType>
 ```
 
-Haciendo esto, el tipo numeroMes definido, podría ser utilizado por otros elementos, ya que, no está contenido en el elemento "mes".
+Haciendo esto, el tipo `numeroMes` definido, podría ser utilizado por otros elementos, ya que, no está contenido en el elemento `mes`.
 
 {:.subsection}
 ### xs:enumeration
 
-EJEMPLO En el siguiente ejemplo se define un elemento llamado "color" con la restricción de que los únicos valores admitidos son: "verde", "amarillo" y "rojo".
+EJEMPLO En el siguiente ejemplo se define un elemento llamado `color` con la restricción de que los únicos valores admitidos son: `verde`, `amarillo` y `rojo`.
 
 ```xml
 <xs:element name="color">
@@ -449,12 +449,12 @@ EJEMPLO En el siguiente ejemplo se define un elemento llamado "color" con la res
 </xs:element>
 ```
 
-- xs:enumeration sirve para definir una lista de valores admitidos.
+- `xs:enumeration` sirve para definir una lista de valores admitidos.
 
 {:.subsection}
 ### xs:pattern
 
-EJEMPLO En el siguiente ejemplo se define un elemento llamado "letra" con la restricción de que el único valor admitido es una de las letras minúsculas de la "a" a la "z":
+EJEMPLO En el siguiente ejemplo se define un elemento llamado `letra` con la restricción de que el único valor admitido es una de las letras minúsculas de la `a` a la `z`:
 
 ```xml
 <xs:element name="letra">
@@ -466,12 +466,12 @@ EJEMPLO En el siguiente ejemplo se define un elemento llamado "letra" con la res
 </xs:element>
 ```
 
-- xs:pattern sirve para definir un patrón de caracteres admitidos (en este caso se admite una única letra minúscula de la "a" a la "z"). El valor del patrón tiene que ser una expresión regular.
+- `xs:pattern` sirve para definir un patrón de caracteres admitidos (en este caso se admite una única letra minúscula de la `a` a la `z`). El valor del patrón tiene que ser una expresión regular.
 
 {:.subsection}
 ### xs:length
 
-EJEMPLO En el siguiente ejemplo se define un elemento llamado "clave" con la restricción de que su valor tiene que ser una cadena de, exactamente, doce caracteres:
+EJEMPLO En el siguiente ejemplo se define un elemento llamado `clave` con la restricción de que su valor tiene que ser una cadena de, exactamente, doce caracteres:
 
 ```xml
 <xs:element name="clave">
@@ -483,12 +483,12 @@ EJEMPLO En el siguiente ejemplo se define un elemento llamado "clave" con la res
 </xs:element>
 ```
 
-- xs:length sirve para especificar una longitud fija.
+- `xs:length` sirve para especificar una longitud fija.
 
 {:.subsection}
 ### xs:whiteSpace
 
-EJEMPLO En el siguiente ejemplo se define un elemento llamado "dirección" con la restricción de que los espacios en blanco, las tabulaciones, los saltos de línea y los retornos de carro que aparezcan en él, se deben mantener (preserve):
+EJEMPLO En el siguiente ejemplo se define un elemento llamado `direccion` con la restricción de que los espacios en blanco, las tabulaciones, los saltos de línea y los retornos de carro que aparezcan en él, se deben mantener (`preserve`):
 
 ```xml
 <xs:element name="direccion">
@@ -500,17 +500,17 @@ EJEMPLO En el siguiente ejemplo se define un elemento llamado "dirección" con l
 </xs:element>
 ```
 
-- xs:whiteSpace sirve para especificar cómo se debe tratar a los posibles espacios en blanco, las tabulaciones, los saltos de línea y los retornos de carro que puedan aparecer.
+- `xs:whiteSpace` sirve para especificar cómo se debe tratar a los posibles espacios en blanco, las tabulaciones, los saltos de línea y los retornos de carro que puedan aparecer.
 
 En vez de preserve también se puede utilizar:
 
-- replace para sustituir todas las tabulaciones, los saltos de línea y los retornos de carro por espacios en blanco.
-- collapse para, después de reemplazar todas las tabulaciones, los saltos de línea y los retornos de carro por espacios en blanco, eliminar todos los espacios en blanco únicos y sustituir varios espacios en blanco seguidos por un único espacio en blanco.
+- `replace` para sustituir todas las tabulaciones, los saltos de línea y los retornos de carro por espacios en blanco.
+- `collapse` para, después de reemplazar todas las tabulaciones, los saltos de línea y los retornos de carro por espacios en blanco, eliminar todos los espacios en blanco únicos y sustituir varios espacios en blanco seguidos por un único espacio en blanco.
 
 {:.section}
 ## Extensiones
 
-xs:extension sirve para extender un elemento simpleType o complexType.
+`xs:extension` sirve para extender un elemento `simpleType` o  `complexType`.
 
 {:.subsection}
 ### xs:extension (complexContent)
@@ -580,13 +580,13 @@ Y el archivo `fichas.xsd`{: .filepath} que permite validarlo:
 </xs:schema>
 ```
 
-- Obsérvese que, infoPersonaAmpliada se basa en infoPersona, añadiéndole dos elementos: "ciudad" y "país".
-- En cuanto a xs:complexContent, sirve para definir restricciones o extensiones a un tipo complejo (complexType).
+- Obsérvese que, `infoPersonaAmpliada` se basa en `infoPersona`, añadiéndole dos elementos: `ciudad` y `país`.
+- En cuanto a `xs:complexContent`, sirve para definir restricciones o extensiones a un tipo complejo (`complexType`).
 
 {:.subsection}
 ### xs:extension (simpleContent)
 
-xs:simpleContent permite definir restricciones o extensiones a elementos que solo contienen datos, es decir, no contienen a otros elementos.
+ `xs:simpleContent` permite definir restricciones o extensiones a elementos que solo contienen datos, es decir, no contienen a otros elementos.
 
 EJEMPLO El siguiente archivo `precios.xsd`{: .filepath}:
 
@@ -623,12 +623,12 @@ xsi:noNamespaceSchemaLocation="precios.xsd">
 </precios>
 ```
 
-- Nótese que, utilizando xs:extension, al elemento "precio" se le ha incorporado el atributo `moneda`.
+- Nótese que, utilizando `xs:extension`, al elemento `precio` se le ha incorporado el atributo `moneda`.
 
 {:.section}
 ## Elementos complejos
 
-Un elemento es complejo (complexType) cuando contiene uno o más elementos y/o atributos. De entre las posibles combinaciones de elementos y/o atributos que puede contener un elemento complejo (1 elemento y 0 atributos, 1 elemento y 1 atributo, 1 elemento y varios atributos, 0 elementos y 1 atributo...) cabe destacar las siguientes:
+Un elemento es complejo (`complexType`) cuando contiene uno o más elementos y/o atributos. De entre las posibles combinaciones de elementos y/o atributos que puede contener un elemento complejo (1 elemento y 0 atributos, 1 elemento y 1 atributo, 1 elemento y varios atributos, 0 elementos y 1 atributo...) cabe destacar las siguientes:
 
 - Un elemento complejo puede estar vacío, es decir, no contener elementos ni texto, pero sí tener al menos un atributo.
 - Un elemento complejo puede contener contenido mixto, es decir, contener uno o más elementos, además de texto. Por otra parte, podría tener atributos, o no.
@@ -636,7 +636,7 @@ Un elemento es complejo (complexType) cuando contiene uno o más elementos y/o a
 {:.subsection}
 ### Elemento vacío
 
-EJEMPLO En el siguiente código se ha definido vacío el elemento "bola", no pudiendo contener ni otros elementos ni texto. Ahora bien, véase que sí tiene un atributo, llamado numero:
+EJEMPLO En el siguiente código se ha definido vacío el elemento `bola`, no pudiendo contener ni otros elementos ni texto. Ahora bien, véase que sí tiene un atributo, llamado `numero`:
 
 ```xml
 <xs:element name="bola">
@@ -653,12 +653,12 @@ EJEMPLO En el siguiente código se ha definido vacío el elemento "bola", no pud
 </xs:simpleType>
 ```
 
-- xs:positiveInteger indica que el valor del atributo `numero` debe ser un número entero mayor que cero.
+- `xs:positiveInteger` indica que el valor del atributo `numero` debe ser un número entero mayor que cero.
 
 {:.subsection}
 ### Contenido mixto
 
-Fíjese que, en el siguiente código se ha definido el elemento "persona" de tipo complejo mixto (mixed="true"):
+Fíjese que, en el siguiente código se ha definido el elemento `persona` de tipo complejo mixto (`mixed="true"`):
 
 ```xml
 <xs:element name="persona">
@@ -677,14 +677,14 @@ Fíjese que, en el siguiente código se ha definido el elemento "persona" de tip
 
 Los indicadores permiten establecer cómo se van a escribir –o utilizar– los elementos en un documento XML. Hay siete tipos de indicadores que se pueden clasificar en:
 
-- Indicadores de orden: secuencia (sequence), todo (all) y elección (choice).
-- Indicadores de ocurrencia: maxOccurs y minOccurs.
-- Indicadores de grupo: de elementos (group) y de atributos (attributeGroup).
+- Indicadores de orden: secuencia (`sequence`), todo (`all`) y elección (`choice`).
+- Indicadores de ocurrencia: `maxOccurs` y `minOccurs`.
+- Indicadores de grupo: de elementos (`group`) y de atributos (`attributeGroup`).
 
 {:.subsection}
 ### Indicadores de orden (xs:sequence, xs:all, xs:choice)
 
-Mientras que xs:sequence sirve para especificar el orden en el que obligatoriamente deben aparecer los elementos hijo de un elemento, xs:all sirve para indicar que dichos elementos pueden aparecer en cualquier orden.
+Mientras que `xs:sequence` sirve para especificar el orden en el que obligatoriamente deben aparecer los elementos hijo de un elemento, `xs:all` sirve para indicar que dichos elementos pueden aparecer en cualquier orden.
 
 EJEMPLO El siguiente archivo `lugar.xsd`{: .filepath}:
 
@@ -707,6 +707,7 @@ EJEMPLO El siguiente archivo `lugar.xsd`{: .filepath}:
   </xs:element>
 </xs:schema>
 ```
+{: file="lugar.xsd" }
 
 Permite validar el siguiente documento XML:
 
@@ -721,12 +722,12 @@ xsi:noNamespaceSchemaLocation="lugar.xsd">
 </lugar>
 ```
 
-Por otra parte, xs:choice sirve para especificar que solamente se permite escribir uno de los elementos hijo. Por ejemplo, en este caso, se podría utilizar para indicar que habría que elegir entre escribir el "nombre" o escribir el "país" de la "ciudad", pero no ambos.
+Por otra parte, `xs:choice` sirve para especificar que solamente se permite escribir uno de los elementos hijo. Por ejemplo, en este caso, se podría utilizar para indicar que habría que elegir entre escribir el `nombre` o escribir el `país` de la `ciudad`, pero no ambos.
 
 {:.subsection}
 ### Indicadores de ocurrencia (maxOccurs, minOccurs)
 
-maxOccurs y minOccurs permiten establecer, respectivamente, el número máximo y mínimo de veces que puede aparecer un determinado elemento. El valor por defecto para maxOccurs y minOccurs es 1.
+`maxOccurs` y `minOccurs` permiten establecer, respectivamente, el número máximo y mínimo de veces que puede aparecer un determinado elemento. El valor por defecto para `maxOccurs` y `minOccurs` es 1.
 
 EJEMPLO Dado el siguiente documento XML `paises.xml`{: .filepath}:
 
@@ -752,12 +753,13 @@ xsi:noNamespaceSchemaLocation="paises.xsd">
    </pais>
 </paises>
 ```
+{: file="paises.xml" }
 
 Considerando que se quiere especificar que:
 
-- "país" pueda aparecer una o ilimitadas veces.
-- "nombre" tenga que escribirse obligatoriamente, y solo una vez, dentro de "país".
-- De cada "país" puedan escribirse de cero a cinco "ciudades".
+- `pais` pueda aparecer una o ilimitadas veces.
+- `nombre` tenga que escribirse obligatoriamente, y solo una vez, dentro de `pais`.
+- De cada `pais` puedan escribirse de cero a cinco `ciudades`.
 
 El código del archivo `paises.xsd`{: .filepath} que permita validar `paises.xml`{: .filepath}, podría ser:
 
@@ -785,7 +787,7 @@ El código del archivo `paises.xsd`{: .filepath} que permita validar `paises.xml
 {:.subsection}
 ### Indicadores de grupo (xs:group, xs:attributeGroup)
 
-xs:group sirve para agrupar un conjunto de declaraciones de elementos relacionados.
+`xs:group` sirve para agrupar un conjunto de declaraciones de elementos relacionados.
 
 EJEMPLO Dado el siguiente documento XML `personas.xml`{: .filepath}:
 
@@ -841,9 +843,9 @@ Y el archivo `personas.xsd`{: .filepath} que permite validarlo:
 </xs:schema>
 ```
 
-- Obsérvese que, se ha definido el grupo datosBasicos, el cual ha sido incorporado a la definición del tipo complejo datosDePersona.
+- Obsérvese que, se ha definido el grupo `datosBasicos`, el cual ha sido incorporado a la definición del tipo complejo `datosDePersona`.
 
-Del mismo modo, attributeGroup sirve para definir un grupo de atributos. Por ejemplo, para validar el siguiente documento XML:
+Del mismo modo, `attributeGroup` sirve para definir un grupo de atributos. Por ejemplo, para validar el siguiente documento XML:
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -881,7 +883,7 @@ Se puede escribir el siguiente código en el archivo `personas.xsd`{: .filepath}
 </xs:schema>
 ```
 
-- En este caso, se ha definido el grupo de atributos datosDePersona, el cual ha sido incorporado a la definición del elemento `persona`.
+- En este caso, se ha definido el grupo de atributos `datosDePersona`, el cual ha sido incorporado a la definición del elemento `persona`.
 
 ## Bibliografía
 
