--- a/_posts/2024-01-30-tarea-xsd.md
+++ b/_posts/2024-01-30-tarea-xsd.md
@@ -35,10 +35,12 @@ Comprobar con Visual Studio Code o XML Copy Editor que "a01_validarMarcadores.xm
 {:.activity}
 ### Validar un sitemap XML
 
-Comprobar con un validador online de sitemaps XML que a01_validarSitemap.xml" es válido.
+Comprobar con un validador online de sitemaps XML que "a01_validarSitemap.xml" es válido.
 
 {:.activity}
 ### Mensaje entre personas
+
+Corregir los errores cometidos en el siguiente documento XML, para que sea válido. Para ello, no modificar la cuarta línea de código de "a03_mensaje.xsd".
 
 {:.activity}
 ### Definición de elementos simples
